take away fixed footer to view better on mobile, add margin to footer, make signup page stackable to view on mobile, make footer menu one line

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -3,7 +3,8 @@
 }
 
 .footer {
-  position: fixed !important;
+  /* position: fixed !important; */
+  margin-top: 20px;
   bottom: 0 !important;
   left: 0 !important;
   width: 100% !important;
